--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,13 +2,20 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/menu_enabled"
+        android:id="@+id/menu_search_current"
+        android:icon="@drawable/ic_search_current_48"
         android:orderInCategory="100"
-        app:showAsAction="always"
-        android:actionLayout="@layout/enabled_switch"/>
+        android:title="@string/search_current_menu"
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/menu_search"
-        android:title="@string/search_menu"
+        android:icon="@drawable/ic_search_48"
         android:orderInCategory="200"
-        app:showAsAction="ifRoom"/>
+        android:title="@string/search_menu"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/menu_settings"
+        android:orderInCategory="300"
+        android:title="@string/settings_menu"
+        app:showAsAction="never" />
 </menu>
