--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="content_overlay">#88000000</color>
 
     <color name="white">#fff</color>
+
+    <color name="search_btn">#BDBDBD</color>
+    <color name="search_btn_pressed">#959595</color>
 </resources>
