--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -7,6 +7,7 @@
     tools:context="com.example.andrea.lyrics.SettingsActivity">
 
     <LinearLayout
+        android:id="@+id/layout_auto_search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -32,6 +33,30 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:checked="true"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layout_delete_recents"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="@dimen/sm_padding">
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/setting_delete_recents_label"
+                android:gravity="center_vertical"
+                android:textSize="@dimen/setting_text_size" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/setting_delete_recents_descr" />
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
