--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,12 +3,13 @@
     <color name="colorPrimary">#424242</color>
     <color name="colorPrimaryDark">#212121</color>
     <color name="colorAccent">#BDBDBD</color>
-
-    <color name="search_background">#ccc</color>
-    <color name="content_overlay">#88000000</color>
-
     <color name="white">#fff</color>
 
+    <color name="search_overlay">#88000000</color>
+    <color name="search_background">#ccc</color>
     <color name="search_btn">#BDBDBD</color>
     <color name="search_btn_pressed">#959595</color>
+
+    <color name="recent_background">#424242</color>
+    <color name="recent_background_pressed">#262626</color>
 </resources>
