Made recent searches area scrollable

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,18 +7,19 @@
     android:background="@color/colorPrimaryDark">
 
     <!-- recent searches -->
-    <RelativeLayout
+    <ScrollView
         android:id="@+id/recents_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:visibility="visible">
         <LinearLayout
             android:id="@+id/recents_grid"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
+            android:layout_gravity="center_horizontal"
             android:orientation="vertical"/>
-    </RelativeLayout>
+    </ScrollView>
     
     <!-- main lyrics -->
     <RelativeLayout
