--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
                     android:gravity="center"
                     android:textSize="20sp"
                     android:textStyle="bold"
-                    android:textColor="@color/colorAccent"
+                    android:textColor="@color/light_gray"
                     android:layout_marginBottom="@dimen/sm_padding"
                     android:layout_marginTop="@dimen/md_padding" />
                 <TextView
@@ -50,7 +50,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:textColor="@color/colorAccent" />
+                    android:textColor="@color/light_gray" />
             </LinearLayout>
         </com.example.andrea.lyrics.views.InterceptableScrollView>
     </RelativeLayout>
@@ -130,5 +130,12 @@
         </RelativeLayout>
 
     </RelativeLayout>
+
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_centerInParent="true"
+        android:visibility="invisible"/>
 
 </RelativeLayout>
