--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,139 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.andrea.lyrics.MainActivity"
-    android:background="@color/colorPrimaryDark">
+    tools:context="com.example.andrea.lyrics.MainActivity">
 
-    <!-- recent searches -->
-    <ScrollView
-        android:id="@+id/recents_layout"
+    <FrameLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:visibility="visible">
-        <LinearLayout
-            android:id="@+id/recents_grid"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:orientation="vertical"/>
-    </ScrollView>
-    
-    <!-- main lyrics -->
-    <RelativeLayout
-        android:id="@+id/lyrics_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="invisible">
-        <com.example.andrea.lyrics.views.InterceptableScrollView
-            android:id="@+id/scroll_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-                <TextView
-                    android:id="@+id/artist_song_text"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/light_gray"
-                    android:layout_marginBottom="@dimen/sm_padding"
-                    android:layout_marginTop="@dimen/md_padding" />
-                <TextView
-                    android:id="@+id/lyrics_text"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:textColor="@color/light_gray" />
-            </LinearLayout>
-        </com.example.andrea.lyrics.views.InterceptableScrollView>
-    </RelativeLayout>
-
-    <!-- search -->
-    <RelativeLayout
-        android:id="@+id/search_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/search_overlay"
-        android:visibility="invisible">
-        <RelativeLayout
-            android:layout_width="@dimen/search_size"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:background="@drawable/search_background"
-            android:padding="@dimen/sm_padding">
-            <LinearLayout
-                android:id="@+id/search_artist_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <AutoCompleteTextView
-                    android:id="@+id/search_artist"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/artist_hint"
-                    android:inputType="textCapWords"
-                    android:lines="1"
-                    android:maxLines="1"
-                    android:imeOptions="actionNext"/>
-                <TextView
-                    android:id="@+id/clear_artist"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="x"
-                    android:textSize="20sp"
-                    android:padding="@dimen/sm_padding"/>
-            </LinearLayout>
-            <LinearLayout
-                android:id="@+id/search_song_layout"
-                android:layout_below="@+id/search_artist_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <AutoCompleteTextView
-                    android:id="@+id/search_song"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/song_hint"
-                    android:inputType="textCapWords"
-                    android:lines="1"
-                    android:maxLines="1"
-                    android:imeOptions="actionSearch"/>
-                <TextView
-                    android:id="@+id/clear_song"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="x"
-                    android:textSize="20sp"
-                    android:padding="@dimen/sm_padding"/>
-            </LinearLayout>
-            <ImageButton
-                android:id="@+id/search_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/search_song_layout"
-                android:layout_centerHorizontal="true"
-                android:src="@drawable/ic_search_dark_48"
-                android:background="@drawable/search_button_bg"
-                android:text="@string/search_button"
-                android:padding="@dimen/sm_padding"
-                android:layout_marginTop="@dimen/sm_padding"/>
-
-        </RelativeLayout>
-
-    </RelativeLayout>
+        android:layout_height="match_parent" />
 
     <ProgressBar
         android:id="@+id/progress"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_centerInParent="true"
-        android:visibility="invisible"/>
+        android:visibility="invisible" />
 
 </RelativeLayout>
