--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
 
     <color name="recent_background">#424242</color>
     <color name="recent_background_pressed">#262626</color>
+
+    <color name="lyrics_line_selected">@color/colorPrimary</color>
 </resources>
