Added ability to select the whole lyrics

--- a/app/src/main/res/menu/lyrics_action_mode.xml
+++ b/app/src/main/res/menu/lyrics_action_mode.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/lyrics_action_mode_select_all"
+        android:icon="@drawable/ic_select_all"
+        android:orderInCategory="100"
+        android:title="@string/lyrics_action_mode_select_all"
+        app:showAsAction="ifRoom" />
+
     <item
         android:id="@+id/lyrics_action_mode_copy"
         android:icon="@drawable/ic_copy"
-        android:orderInCategory="100"
+        android:orderInCategory="200"
         android:title="@string/lyrics_action_mode_copy"
         app:showAsAction="ifRoom" />
+
 </menu>
