--- a/app/src/main/res/layout/dialog_search.xml
+++ b/app/src/main/res/layout/dialog_search.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/search_background"
@@ -29,7 +30,8 @@
             android:layout_height="wrap_content"
             android:padding="@dimen/sm_padding"
             android:text="x"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            tools:ignore="HardcodedText" />
     </LinearLayout>
 
     <!-- song name -->
@@ -57,7 +59,8 @@
             android:layout_height="wrap_content"
             android:padding="@dimen/sm_padding"
             android:text="x"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            tools:ignore="HardcodedText" />
     </LinearLayout>
 
     <!-- search button -->
@@ -71,6 +74,7 @@
         android:background="@drawable/search_button_bg"
         android:padding="@dimen/sm_padding"
         android:src="@drawable/ic_search_dark_48"
-        android:text="@string/search_button" />
+        android:text="@string/search_button"
+        tools:ignore="ContentDescription" />
 
 </RelativeLayout>
