--- a/app/src/main/res/layout/fragment_recent_searches.xml
+++ b/app/src/main/res/layout/fragment_recent_searches.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:visibility="visible">
+        android:visibility="visible"
+        tools:ignore="UselessParent">
 
         <LinearLayout
             android:id="@+id/recents_grid"
